# entry_point

./: .gitignore  CMakeLists.txt  README.md  entry_point.hpp  format_source
test/: .envrc  CMakeLists.txt  em_build_and_run
test/lib/asserter/: repo-state.txt
test/src/: test.cpp
